--- a/globe-local/package.json
+++ b/globe-local/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "d3-geo": "^3.1.1",
     "geotiff": "^2.1.4-beta.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
